<resources>
    <string name="app_name">Food Review</string>
    <string name="button_addReview">Add Review</string>
    <string name="menu_addReview">Add</string>
    <string name="menu_cancelReview">Cancel</string>
    <string name="menu_deleteReview">Delete</string>
    <string name="enter_all_fields"> Please Fill in all Fields </string>
    <string name="save_review"> Save Review </string>
    <string name="button_addImage"> Change Image </string>
    <string name="select_review_image">Select Image</string>
    <string name="change_review_image">Change Image</string>
    <string name="button_location">Set Location</string>
    <string name="continueButton">Continue Button</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="numberPicker">NumberPicker</string>

    <string name="hint_reviewName">Name</string>
    <string name="hint_reviewAddress">Address</string>
    <string name="hint_reviewPostCode">PostCode</string>
    <string name="hint_reviewJustEat">JustEat Rating</string>
    <string name="hint_reviewItems">Items</string>
    <string name="hint_reviewPrice">Price</string>
    <string name="hint_reviewComments">Comments</string>
    <string name="hint_reviewRating">My Rating</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_review_maps">Map of All Reviews </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- START Firebase Resources-->
    <string name="messageLoading">Please Wait while the Reviews are Loading...</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="my_rating">My Rating</string>
</resources>